# base_image_classification

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: README.md
docker/: Dockerfile
example_payloads/: inference.json
experiments/: README.md
models/: README.md
src/: main.py
src/classifier/: __init__.py  classifier.py  classifier_controller.py  classifier_interface.py
src/payloads/: __init__.py  inference_payload.py
tests/: inference.py
