[project]
name = "base-image-classification"
version = "0.1.0"
description = "Image classification base repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.7.0",
    "datasets==3.6.0",
    "evaluate==0.4.3",
    "fastapi==0.115.12",
    "mlflow==2.22.0",
    "natsort==8.4.0",
    "opencv-python==4.11.0.86",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "pydantic==2.11.5",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.0",
    "supervision==0.25.1",
    "tensorboard==2.19.0",
    "tensorboardx==2.6.2.2",
    "timm==1.0.15",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.52.4",
]
